# swiss_bro

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  setup.cfg
infra/: docker-compose-prod.yaml
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
src/bot/: constants.py  currency.py  db.py  handler.py  keyboard.py  log_message.py  main.py  middleware.py  model.py  parser.py  scheduller.py  scheme.py
src/bot/handler/: __init__.py  add_good.py  check_goods.py  check_one.py  cmd.py  delete_good.py  lang.py
src/config/: __init__.py  config.py  config.yaml  logger.py
