[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    { name = "Vasilii Stakrotckii", email = "142693897+inferno681@users.noreply.github.com" },
]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.10.1"
pyyaml = "^6.0.2"
redis = "^6.2.0"
aiogram = "^3.20.0.post0"
playwright = "^1.53.0"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"
pymongo = "^4.13.2"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
wemake-python-styleguide = "^1.0.0"
isort = "^6.0.0"
types-pyyaml = "^6.0.12.20250516"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
