[project]
name = "swiss_bro_bot"
version = "0.1.0"
description = ""
authors = [
    { name = "Vasilii Stakrotckii", email = "142693897+inferno681@users.noreply.github.com" },
]
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "pydantic-settings>=2.10.1,<3",
    "pyyaml>=6.0.2,<7",
    "redis>=6.2.0,<7",
    "aiogram[i18n]>=3.20.0.post0,<4",
    "playwright>=1.53.0,<2",
    "beautifulsoup4>=4.13.4,<5",
    "lxml>=6.0.0,<7",
    "pymongo>=4.13.2,<5",
    "apscheduler>=3.11.0,<4",
    "beanie>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0,<2",
    "wemake-python-styleguide>=1.0.0,<2",
    "isort>=6.0.0,<7",
    "types-pyyaml>=6.0.12.20250516,<7",
]


[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.babel]
domain = "messages"
input-dirs = ["."]
output-dir = "locales"
keywords = ["_", "lazy_gettext"]
encoding = "utf-8"
